--- a/scss/2-base/_typography.scss
+++ b/scss/2-base/_typography.scss
@@ -29,3 +29,31 @@ h6 {
         font-weight: normal;
     }
 }
+
+.title-hero {
+    font-size: 64px;
+    font-weight: $weight-bold;
+}
+
+.section-title {
+    font-size: 40px;
+    font-weight: $weight-bold;
+    margin-bottom: 20px;
+
+    &-cta {
+        font-size: 34px;
+        font-weight: $weight-bold;
+        margin-bottom: 20px;
+    }
+}
+
+p {
+    color: $grayish-violet;
+    line-height: 1.7em;
+    margin-bottom: 20px;
+}
+
+::selection {
+    background-color: $cyan;
+    color: white;
+}
