--- a/scss/4-layouts/_section.scss
+++ b/scss/4-layouts/_section.scss
@@ -1,7 +1,27 @@
 section {
-    padding: 50px 40px;
+    padding: 50px 0;
+}
+
+.section-landing {
+    padding: 100px 0;
 }
 
 .cta-section {
     @include backgroundImageCover('/images/bg-boost-desktop.svg');
+    background-color: $very-dark-blue;
+    text-align: center;
+    color: #fff;
+}
+
+.search-bar-urls {
+    border-radius: 5px;
+    @include backgroundImageCover('/images/bg-boost-desktop.svg');
+    background-color: $very-dark-blue;
+    padding: 30px;
+    margin-top: -110px;
+    margin-bottom: 110px;
+}
+
+.stats-section {
+    background-color: $light-gray;
 }
