--- a/scss/main.css
+++ b/scss/main.css
@@ -15,9 +15,13 @@
   margin-right: 2em;
 }
 
+.horizontal-list li:hover {
+  cursor: pointer;
+}
+
 .container {
   margin: 0 auto;
-  width: 87%;
+  width: 80%;
 }
 
 @media (max-width: 767px) {
@@ -112,6 +116,7 @@ main {
 body {
   line-height: 1;
   font-family: "Poppins", sans-serif;
+  overflow-x: hidden;
 }
 
 ol,
@@ -178,47 +183,153 @@ h6 small {
   font-weight: normal;
 }
 
+.title-hero {
+  font-size: 64px;
+  font-weight: 700;
+}
+
+.section-title {
+  font-size: 40px;
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+
+.section-title-cta {
+  font-size: 34px;
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+
+p {
+  color: #9e9aa7;
+  line-height: 1.7em;
+  margin-bottom: 20px;
+}
+
+::-moz-selection {
+  background-color: #2acfcf;
+  color: white;
+}
+
+::selection {
+  background-color: #2acfcf;
+  color: white;
+}
+
 /* Import all components .scss files */
 /* Place all button components styling here */
-.cta-btn {
+.cta-btn,
+.btn-squared {
   background-color: #2acfcf;
   color: white;
   font-weight: 700;
   padding: 10px 25px;
   border-radius: 20px;
   border: none;
+  letter-spacing: 0.5px;
   -webkit-transition: 200ms ease;
   transition: 200ms ease;
 }
 
-.cta-btn:hover {
+.cta-btn:hover,
+.btn-squared:hover {
   cursor: pointer;
-  opacity: 0.8;
+  background: #51dbdb;
+}
+
+.btn-squared {
+  border-radius: 5px;
+  padding: 13px 30px;
+  font-size: 18px;
 }
 
 /* Place all input components styling here */
 input,
 select,
 textarea {
-  border: 1px solid #ccc;
+  border: 2px solid #ccc;
   font-size: 18px;
-  padding: 20px;
-}
-
-input:focus,
-select:focus,
-textarea:focus {
-  border: 1px solid #c7c7c7;
+  padding: 12px 25px;
+  border-radius: 10px;
+  color: #3b3054;
+  -webkit-transition: 200ms ease;
+  transition: 200ms ease;
 }
 
 /* Place all modal/popup components styling here */
+.card {
+  padding: 10px;
+}
+
+.card-content {
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 5px;
+  min-height: 275px;
+}
+
+.card-icon {
+  margin: -60px 0 40px 10px;
+  padding: 20px;
+  border-radius: 50%;
+  background-color: #3b3054;
+}
+
+.card-title {
+  font-size: 20px;
+  font-weight: 700;
+  color: #3b3054;
+  margin-bottom: 15px;
+}
+
+#card-2 {
+  margin-top: 50px;
+}
+
+#card-3 {
+  margin-top: 100px;
+}
+
+.line-through-cards {
+  height: 10px;
+  background-color: #2acfcf;
+  width: 90%;
+  margin: 250px 0 -200px 20px;
+  margin-top: 250px;
+  margin-bottom: -200px;
+}
+
+.illustration-landing {
+  height: 475px;
+  float: right;
+  margin-top: -50px;
+  margin-right: -200px;
+}
+
 /* Import all layouts .scss files */
 /* Footer component */
 footer {
   background-color: #232127;
   color: white;
-  padding: 20px;
-  text-align: center;
+  padding: 60px 0;
+}
+
+footer .footer-title-menu {
+  font-weight: 700;
+  padding: 0 0 20px 0;
+}
+
+footer .footer-ul li {
+  font-weight: 300;
+  margin-bottom: 10px;
+  color: #9e9aa7;
+  -webkit-transition: 200ms ease;
+  transition: 200ms ease;
+}
+
+footer .footer-ul li:hover {
+  cursor: pointer;
+  color: #b8b5bf;
 }
 
 /* Header component */
@@ -229,8 +340,18 @@ header {
   padding: 40px 0;
 }
 
+header .horizontal-list li {
+  -webkit-transition: 200ms ease;
+  transition: 200ms ease;
+}
+
+header .horizontal-list li:hover {
+  cursor: pointer;
+  color: #35323e;
+}
+
 .mobile-menu {
-  opacity: 0;
+  display: none;
   z-index: 9999;
   padding: 10px;
   font-weight: 700;
@@ -264,6 +385,8 @@ header {
   display: -ms-flexbox;
   display: flex;
   height: 100%;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .row .col {
@@ -273,13 +396,51 @@ header {
   position: relative;
 }
 
+.row .col-4 {
+  -webkit-box-flex: 33%;
+      -ms-flex: 33%;
+          flex: 33%;
+}
+
+.row .col-3 {
+  -webkit-box-flex: 25%;
+      -ms-flex: 25%;
+          flex: 25%;
+}
+
+.center {
+  text-align: center;
+}
+
 section {
-  padding: 50px 40px;
+  padding: 50px 0;
+}
+
+.section-landing {
+  padding: 100px 0;
 }
 
 .cta-section {
   background: url("/images/bg-boost-desktop.svg");
   background-repeat: no-repeat;
   background-size: cover;
+  background-color: #35323e;
+  text-align: center;
+  color: #fff;
+}
+
+.search-bar-urls {
+  border-radius: 5px;
+  background: url("/images/bg-boost-desktop.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: #35323e;
+  padding: 30px;
+  margin-top: -110px;
+  margin-bottom: 110px;
+}
+
+.stats-section {
+  background-color: #f2f2f2;
 }
 /*# sourceMappingURL=main.css.map */
