a little validation added to input field

--- a/scss/2-base/_typography.scss
+++ b/scss/2-base/_typography.scss
@@ -53,6 +53,12 @@ p {
     margin-bottom: 20px;
 }
 
+.error-msg {
+    display: none;
+    margin: 10px 0 0 0;
+    color: $red;
+}
+
 ::selection {
     background-color: $cyan;
     color: white;
