--- a/scss/4-layouts/_section.scss
+++ b/scss/4-layouts/_section.scss
@@ -13,13 +13,17 @@ section {
     color: #fff;
 }
 
-.search-bar-urls {
-    border-radius: 5px;
-    @include backgroundImageCover('/images/bg-boost-desktop.svg');
-    background-color: $very-dark-blue;
-    padding: 40px;
+.container-shorten {
     margin-top: -110px;
     margin-bottom: 110px;
+
+    .search-bar-urls {
+        border-radius: 5px;
+        @include backgroundImageCover('/images/bg-boost-desktop.svg');
+        background-color: $very-dark-blue;
+        padding: 40px;
+        margin-bottom: 30px;
+    }
 }
 
 .stats-section {
