--- a/scss/3-components/_input.scss
+++ b/scss/3-components/_input.scss
@@ -9,4 +9,8 @@ textarea {
     color: $dark-violet;
 
     transition: $transition-ease;
+
+    @include mobile {
+        width: 100% !important;
+    }
 }
