--- a/scss/4-layouts/_grid.scss
+++ b/scss/4-layouts/_grid.scss
@@ -3,6 +3,10 @@
     height: 100%;
     flex-wrap: wrap;
 
+    @include mobile {
+        flex-direction: column;
+    }
+
     .col {
         flex: 50%;
         position: relative;
