--- a/scss/2-base/_reset.scss
+++ b/scss/2-base/_reset.scss
@@ -79,6 +79,10 @@ body {
     line-height: 1;
     font-family: $font-poppins;
     overflow-x: hidden;
+
+    @include mobile {
+        text-align: center;
+    }
 }
 
 ol,
