--- a/scss/4-layouts/_footer.scss
+++ b/scss/4-layouts/_footer.scss
@@ -4,12 +4,25 @@ footer {
     color: white;
     padding: 60px 0;
 
+    @include mobile {
+        text-align: center;
+
+        .footer-logo {
+            margin-bottom: 40px;
+        }
+
+    }
+
     .footer-title-menu {
         font-weight: $weight-bold;
         padding: 0 0 20px 0;
     }
 
     .footer-ul {
+        @include mobile {
+            margin-bottom: 40px;
+        }
+
         li {
             font-weight: 300;
             margin-bottom: 10px;
