--- a/scss/2-base/_typography.scss
+++ b/scss/2-base/_typography.scss
@@ -33,12 +33,20 @@ h6 {
 .title-hero {
     font-size: 64px;
     font-weight: $weight-bold;
+    line-height: 1.3em;
+    color: $very-dark-blue;
+
+    @include mobile {
+        padding-top: 50vh;
+        font-size: 46px;
+    }
 }
 
 .section-title {
     font-size: 40px;
     font-weight: $weight-bold;
     margin-bottom: 20px;
+    color: $very-dark-blue;
 
     &-cta {
         font-size: 34px;
@@ -51,6 +59,7 @@ p {
     color: $grayish-violet;
     line-height: 1.7em;
     margin-bottom: 20px;
+    font-size: $base-font-size;
 }
 
 .error-msg {
