--- a/scss/3-components/_button.scss
+++ b/scss/3-components/_button.scss
@@ -5,8 +5,8 @@
     background-color: $cyan;
     color: white;
     font-weight: $weight-bold;
-    padding: 10px 25px;
-    border-radius: 20px;
+    padding: 10px 35px;
+    border-radius: 25px;
     border: none;
     letter-spacing: 0.5px;
     transition: $transition-ease;
@@ -14,6 +14,10 @@
     &:hover {
         cursor: pointer;
         background: lighten($cyan, 10%);
+    }
+
+    @include mobile {
+        font-size: $base-font-size;
     }
 }
 
@@ -35,6 +39,10 @@
     padding: 8px 30px;
     margin-top: -4px;
     margin-left: 15px;
+
+    @include mobile {
+        width: 100%;
+    }
 }
 
 .btn-copy-active {
